--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/simple-icons": "^1.2.38",
     "@iconify-json/vscode-icons": "^1.2.22",
     "@nuxt/content": "^3.5.1",
+    "@nuxtjs/i18n": "^9.5.6",
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui-pro": "^3.1.3",
     "@rollup/plugin-yaml": "^4.1.2",
