--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "sync-api": "node scripts/fetch-api.mjs",
-    "generate": "node scripts/generate.mjs",
+    "generate": "nuxt generate",
+    "publish": "node scripts/publish.mjs",
     "preview": "nuxt preview",
     "lint": "eslint .",
     "typecheck": "nuxt typecheck"
