--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "sync-api": "node scripts/fetch-api.mjs",
+    "sync-releases": "node scripts/fetch-releases.mjs",
     "generate": "nuxt generate",
     "publish": "node scripts/publish.mjs",
     "preview": "nuxt preview",
