--- a/content/releases.json
+++ b/content/releases.json
@@ -2,7 +2,7 @@
   "versions": [
     {
       "releaseUrl": "https://github.com/MemTensor/MemOS/releases/tag/v0.2.0",
-      "title": "v0.2.0",
+      "name": "v0.2.0",
       "date": "2025-07-11",
       "changedInfo": [
         {
@@ -51,7 +51,7 @@
     },
     {
       "releaseUrl": "https://github.com/MemTensor/MemOS/releases/tag/v0.1.13",
-      "title": "v0.1.13",
+      "name": "v0.1.13",
       "date": "2025-07-09",
       "changedInfo": [
         {
@@ -156,9 +156,15 @@
     },
     {
       "releaseUrl": "https://github.com/MemTensor/MemOS/releases/tag/v0.1.12",
-      "title": "v0.1.12",
+      "name": "v0.1.12(Pre-release)",
       "date": "2025-07-08",
-      "changedInfo": []
+      "changedInfo": [
+        {
+          "type": "Full Changelog",
+          "description": "https://github.com/MemTensor/MemOS/commits/v0.1.12",
+          "author": "MemTensor"
+        }
+      ]
     }
   ]
 }
