--- a/content/zh/settings.yml
+++ b/content/zh/settings.yml
@@ -12,6 +12,7 @@ nav:
   - "(ri:rocket-line) 快速入门":
     - "(ri:play-line) 快速启动": getting_started/quick_start.md
     - "(ri:bookmark-line) 创建你的第一个记忆": getting_started/your_first_memory.md
+    - "(ri:file-code-line) REST API 服务": getting_started/rest_api_server.md
     - "(ri:code-line) 示例": getting_started/examples.md
 
   - "(ri:cpu-line) MOS":
